# ShineFinch

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SelectorWindowOverlay.qml  main.cpp  res.qrc  vcpkg.json
src/: Screenshot.cpp  Screenshot.h  SelectorWindow.cpp  SelectorWindow.h  ShortcutManager.cpp  ShortcutManager.h
